sumo/tests/sumo/spec/flow/errors/period_no_end/errors.sumo
Error: If 'period' or 'vehsPerHour' are given at most one of 'end' and 'no' are allowed in flow 'f1'.
Quitting (on error).
